src/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <description>Overall goals, objectives, and challenges for penetrating an account.</description>
    <fields>
        <fullName>Account_Goals__c</fullName>
        <label>Account Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan_ID__c</fullName>
        <label>Account Plan ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Account_Sales__c = 0 , 1,   (  Plan_FY_Account_Sales_Goal__c  - Last_FY_Account_Sales__c  ) /  Last_FY_Account_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001PRP8EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_challenges_3_12_months__c</fullName>
        <label>Challenges (3-12 months)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_cost_optimization__c</fullName>
        <inlineHelpText>How will you take responsibility for your account&apos;s cost and effect optimization.</inlineHelpText>
        <label>Cost- and effect optimization</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_needs__c</fullName>
        <inlineHelpText>Kundens behov ift.
- Løsningsdesign
- Prisstruktur
- Prisniveau
- Andet</inlineHelpText>
        <label>Account needs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_situation__c</fullName>
        <inlineHelpText>Data:
- Antal lokationer, kompleksitet
- Nuværende afsætning
- Potentiale målt i afsætning
- Relationer
- Andet</inlineHelpText>
        <label>Account situation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_strategic_goals__c</fullName>
        <label>Strategic goals (1-3 years)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_summary__c</fullName>
        <inlineHelpText>Sælgers opsummering / vurdering af strategisk fokus:   

Eksisterende kunde: 
Hvordan fastholder og udvikler vi kunden

Ny kunde: 
Hvilke aktiviteter gør at vi lykkes med salget</inlineHelpText>
        <label>Account summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_areas__c</fullName>
        <label>Action areas</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_cost_efficiency__c</fullName>
        <label>Admin - cost efficiency</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_invoicing__c</fullName>
        <label>Admin - invoicing</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_prices_and_terms__c</fullName>
        <label>Admin - prices and terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BtB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BtB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BtC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BtC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_position__c</fullName>
        <inlineHelpText>Hvilken løsning og prisdesign som konkurrenten er lykkes med overfor kunden?</inlineHelpText>
        <label>Competitor position</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consequences__c</fullName>
        <inlineHelpText>Muligheder 
Risici / Trusler</inlineHelpText>
        <label>Consequences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Critical_success_factors__c</fullName>
        <label>Critical success factors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Account__r.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this flag if you want to mark this Account Plan as deleted</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deliver_cover__c</fullName>
        <label>Deliver - Coverage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deliver_delivery_quality__c</fullName>
        <label>Deliver - Delivery quality</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Economical_goals__c</fullName>
        <label>Economical goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_CSF_and_goal__c</fullName>
        <label>Finance - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_business_partner__c</fullName>
        <label>General - Business partner</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_CSF_and_goal__c</fullName>
        <label>HR - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_add_more_value_than_last_year__c</fullName>
        <inlineHelpText>How to add more value than last year</inlineHelpText>
        <label>Value add</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_CSF_and_goal__c</fullName>
        <label>IT - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>text(Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KVI_Actions__c</fullName>
        <label>KVI Loyalitetstal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KVI_Index_Current_FQ__c</fullName>
        <label>KVI Index (Current FQ)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KVI_Summary__c</fullName>
        <label>KVI Total Index (Current FY)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KVI__c</fullName>
        <inlineHelpText>Indsæt tal fra seneste KVI måling</inlineHelpText>
        <label>KVI Index</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Business_Problems__c</fullName>
        <label>Key Business Problems</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Client_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Client Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N60000001PRPAEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_FY_Account_Sales__c</fullName>
        <formula>Last_FY_Product_Sales__c  +  Last_FY_Services_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last FY Account Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Product_Sales__c</fullName>
        <label>Last FY Product Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_FY_Services_Sales__c</fullName>
        <label>Last FY Services Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Revision__c</fullName>
        <label>Last Plan Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logistics_CSF_and_goal__c</fullName>
        <label>Logistics - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_CSF_and_goal__c</fullName>
        <inlineHelpText>Select the critical success factors that are relevant to your customers and set the targets.</inlineHelpText>
        <label>Management - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_CSF_and_goal__c</fullName>
        <label>Marketing - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_important_activities__c</fullName>
        <label>Most important activities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_O__c</fullName>
        <inlineHelpText>Areas where BDK sees new opporunities to excell further or create new advantages.</inlineHelpText>
        <label>Opportunities (O)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Account_Sales_Goal__c</fullName>
        <formula>Plan_FY_Product_Sales_Goal__c  +  Plan_FY_Services_Sales_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan FY Account Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Product_Sales_Goal__c</fullName>
        <label>Plan FY Product Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_FY_Services_Sales_Goal__c</fullName>
        <label>Plan FY Services Sales Goal</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planning_Year__c</fullName>
        <label>Planning Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY2013</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FY2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Barriers__c</fullName>
        <label>Potential Barriers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procurement_CSF_and_goal__c</fullName>
        <label>Procurement - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sales_Growth__c</fullName>
        <formula>IF ( Last_FY_Product_Sales__c = 0, 1 ,  (  Plan_FY_Product_Sales_Goal__c -  Last_FY_Product_Sales__c ) /  Last_FY_Product_Sales__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <label>Responsible</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_CSF_and_goal__c</fullName>
        <label>Sales - CSF and goal</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales - Seller</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_area2__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_customer_communication__c</fullName>
        <label>Sales - Customer communication</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_customer_contacts__c</fullName>
        <label>Sales - Customer contacts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Growth__c</fullName>
        <formula>IF (  Last_FY_Services_Sales__c = 0 , 1, (  Plan_FY_Services_Sales_Goal__c  -  Last_FY_Services_Sales__c  )  /  Last_FY_Services_Sales__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strategic_actions_SO__c</fullName>
        <inlineHelpText>What actions/initiatives should be taken in order to match the opportunities as well as strengths?</inlineHelpText>
        <label>Strategic actions (SO)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_actions_ST__c</fullName>
        <inlineHelpText>Describe the ways in which BDK can use its own strengths to reduce its vulnerability to the external threats.</inlineHelpText>
        <label>Strategic actions (ST)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_actions_WO__c</fullName>
        <inlineHelpText>What actions/initiatives should be taken in order to eliminate/overcome the weaknesses and pursue/use the opportunities?</inlineHelpText>
        <label>Strategic actions (WO)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_actions_WT__c</fullName>
        <inlineHelpText>What actions/initiatives should be taken in order to make BDK less sensitive to external threats of various kinds in relation to already known weaknesses.</inlineHelpText>
        <label>Strategic actions (WT)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strength_S__c</fullName>
        <inlineHelpText>Things/situations/areas, which BDK already does very well or excellerate in.</inlineHelpText>
        <label>Strengths (S)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_to_Leverage__c</fullName>
        <label>Strengths to Leverage</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats_T__c</fullName>
        <inlineHelpText>External factors in the market or legal factors which can threaten BDK’s business opportunities</inlineHelpText>
        <label>Threats (T)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <inlineHelpText>Kommende aktiviteter på kunden 
Hvem gør hvad / hvornår</inlineHelpText>
        <label>Timeline</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Udland__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Udland</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weakness_W__c</fullName>
        <inlineHelpText>Things/situations which BDK handles poorly, or worse than competitors or simply does not do/have at present.</inlineHelpText>
        <label>Weaknesses (W)</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Your_ambition_with_account__c</fullName>
        <label>My ambition with account (12 months)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>deliver_coordination__c</fullName>
        <label>Deliver - Coordination</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>deliver_product_supply__c</fullName>
        <label>Deliver - Product offering</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>Account_Plans_Existerende_salgsplaner</fullName>
        <columns>Account__c</columns>
        <columns>Account_Plan_ID__c</columns>
        <columns>NAME</columns>
        <columns>Planning_Year__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Upload From 2013</value>
        </filters>
        <label>Account Plans (Existerende salgsplaner)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Planning_Year__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Sales_responsible__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Account Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Account_Plans</fullName>
        <columns>NAME</columns>
        <columns>Customer_ID__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sales_area2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Plans</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <recordTypes>
        <fullName>PDK_BE</fullName>
        <active>true</active>
        <label>PDK BE</label>
    </recordTypes>
    <recordTypes>
        <fullName>PDK_LO</fullName>
        <active>true</active>
        <label>PDK LO</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>